# binrw

./: .swp  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  code_coverage.sh  release.sh  rustfmt.toml
binread/: Cargo.toml  build.rs
binread/src/: attribute.rs  binary_template.rs  binread_impls.rs  endian.rs  error.rs  file_ptr.rs  helpers.rs  lib.rs  options.rs  pos_value.rs  private.rs  punctuated.rs  strings.rs
binread/src/io/: cursor.rs  error.rs  mod.rs  no_std.rs
binread/tests/: after_parse_test.rs  derive_enum.rs  derive_struct.rs  derive_struct_generic.rs  derive_struct_map.rs  derive_test.rs  derive_test2.rs  derive_test3.rs  derive_tests.rs  derive_try_map.rs  derive_unit_enum.rs  enum.rs  errors.rs  temp_test.rs  ui.rs  unit_enum.rs  unit_struct.rs
binread/tests/derive/: struct_map.rs  structs.rs  unit_struct.rs
binread/tests/errors/: conflicting_keyword_bool.rs  conflicting_keyword_bool.stderr  conflicting_keyword_enum_error_mode.stderr  conflicting_keyword_option.stderr  conflicting_keyword_passed_args.rs  enum_missing_magic_repr.rs  invalid_assert.stderr  invalid_assert_args.rs  invalid_assert_args.stderr  invalid_assert_condition.rs  invalid_assert_condition.stderr  invalid_assert_variable.rs  invalid_keyword_enum.rs  invalid_keyword_enum_variant.rs  invalid_keyword_struct.stderr  invalid_keyword_struct_field.rs  invalid_keyword_struct_field.stderr  invalid_keyword_unit_enum.stderr  invalid_keyword_unit_enum_field.rs  invalid_map_fn.stderr  invalid_offset_type.rs  invalid_parse_with_fn.stderr  magic_conflict.stderr  non_blocking_errors.stderr  repr_magic_conflict.stderr  unsupported_type_enum.rs  unsupported_type_enum.stderr  unsupported_type_union.rs  unsupported_type_union.stderr
binread/tests/io/: no_std.rs
binread/tests/ui/: conflicting_keyword_bool.rs  conflicting_keyword_cond_endian.rs  conflicting_keyword_cond_endian.stderr  conflicting_keyword_enum_error_mode.rs  conflicting_keyword_imports.rs  conflicting_keyword_imports.stderr  conflicting_keyword_map.rs  conflicting_keyword_map.stderr  conflicting_keyword_option.rs  conflicting_keyword_passed_args.stderr  conflicting_keyword_read_mode.rs  deref_now_offset_after_conflict.rs  deref_now_offset_after_conflict.stderr  enum_missing_magic_repr.stderr  invalid_assert_args.rs  invalid_assert_args.stderr  invalid_assert_variable.stderr  invalid_if_args.rs  invalid_if_args.stderr  invalid_if_condition.rs  invalid_keyword_enum.stderr  invalid_keyword_enum_variant.stderr  invalid_keyword_struct.rs  invalid_keyword_struct_field.stderr  invalid_keyword_unit_enum.rs  invalid_keyword_unit_enum_field.stderr  invalid_keyword_with_imports.rs  invalid_keyword_with_imports.stderr  invalid_magic_type.rs  invalid_map_fn.rs  invalid_map_return_type.rs  invalid_map_return_type.stderr  invalid_offset_type.stderr  invalid_parse_with_fn.rs  invalid_try_map_return_type.rs  invalid_try_map_return_type.stderr  magic_conflict.rs  non_blocking_errors.rs  repr_magic_conflict.rs  unsupported_type_enum.rs  (+2 more)
binread_derive/: Cargo.toml  LICENSE
binread_derive/src/: actions.rs  attributes.rs  binread_endian.rs  binwrite_endian.rs  compiler_error.rs  lib.rs  sanitization.rs
binread_derive/src/codegen/: .after_parse.rs.swo  arg_type.rs  meta_attrs.rs  mod.rs  read_options.rs  sanitization.rs
binread_derive/src/meta_attrs/: field_level_attrs.rs  mod.rs  parser.rs  spanned_value.rs  top_level_attrs.rs
binread_derive/src/parser/: attrs.rs  field_level_attrs.rs  keywords.rs  macros.rs  meta_types.rs  mod.rs  parsing_tests.rs  top_level_attrs.rs
binread_derive/tests/: derive.rs  derive_test.rs
binrw/: Cargo.toml  build.rs  tarpaulin.toml
binrw/benches/: fast_vec.rs
binrw/doc/: attribute.md  index.md  performance.md
binrw/examples/: temp.rs
binrw/src/: attribute.rs  binary_template.rs  binread.rs  binread_impls.rs  binwrite.rs  builder_types.rs  container.rs  docs.rs  endian.rs  error.rs  file_ptr.rs  gats.rs  has_magic.rs  helpers.rs  lib.rs  meta.rs  named_args.rs  options.rs  pos_value.rs  private.rs  punctuated.rs  strings.rs  with.rs
binrw/src/attribute/: mod.rs  read.rs  write.rs
binrw/src/binread/: impls.rs  mod.rs  options.rs
binrw/src/binwrite/: impls.rs  mod.rs
binrw/src/error/: backtrace.rs  mod.rs
binrw/src/helpers/: file_ptr.rs  mod.rs  punctuated.rs
binrw/src/io/: bufreader.rs  cursor.rs  error.rs  mod.rs  no_std.rs  prelude.rs  seek.rs  take_seek.rs
binrw/tests/: .derive_test.rs.swo  after_parse_test.rs  binread_impls.rs  binwrite.rs  binwrite_impls.rs  bitfield.rs  builder.rs  clone_args.rs  dbg.rs  derive_rustfmt.rs  derive_test.rs  derive_test2.rs  endian.rs  error.rs  infer_map.rs  lib.rs  meta.rs  named_args.rs  pos_value.rs  punctuated.rs  stream_ext.rs  strings.rs  temp_test.rs  ui.rs  with.rs
binrw/tests/derive/: binwrite_temp.rs  enum.rs  enums.rs  fn_helper.rs  lib.rs  macro_hygiene.rs  map_args.rs  mod.rs  struct.rs  struct_generic.rs  struct_map.rs  structs.rs  unit_enum.rs  unit_struct.rs  write.rs
binrw/tests/error/: backtrace.rs  backtrace.stderr  backtrace_2.rs  backtrace_2.stderr  backtrace_2_verbose.stderr  backtrace_verbose.stderr
binrw/tests/io/: bufreader.rs  mod.rs  no_std.rs  seek.rs  take_seek.rs
binrw/tests/test_helpers/: mod.rs
binrw/tests/ui/: args_calc_conflict.rs  args_calc_conflict.stderr  args_missing.rs  args_missing.stderr  args_vec_mistakes.rs  args_vec_mistakes.stderr  bad_args_type.rs  bad_args_type.stderr  bad_parse_with_fn.rs  bad_parse_with_fn.stderr  bad_parse_with_map.rs  bad_parse_with_map.stderr  binrw_br_temp_no_bw_ignore.rs  binrw_br_temp_no_bw_ignore.stderr  conflicting_keyword_bool.rs  conflicting_keyword_cond_endian.rs  conflicting_keyword_count_args.rs  conflicting_keyword_count_args.stderr  conflicting_keyword_enum_error_mode.rs  conflicting_keyword_imports.rs  conflicting_keyword_imports.stderr  fn_helper_errors.rs  (+71 more)
binrw_derive/: Cargo.toml  README.md  build.rs
binrw_derive/src/: args_type.rs  binread.rs  binrw_attr.rs  binwrite.rs  compiler_error.rs  lib.rs  meta_types.rs  result.rs  util.rs
binrw_derive/tests/: derive.rs
(+161 files in other folders)
