[workspace]
members = [
    "binrw",
    "binrw_derive"
]
resolver = "2"

[workspace.package]
authors = [
    "jam1garner <jam@jam1.re>",
    "Colin Snover <github.com@zetafleet.com>",
    "Kitlith <kitlith@kitl.pw>",
    "roblabla <robinlambertz+dev@gmail.com>"
]
documentation = "https://docs.rs/binrw"
edition = "2024"
homepage = "https://binrw.rs"
license = "MIT"
publish = false # Use `release.sh`
repository = "https://github.com/jam1garner/binrw"
rust-version = "1.88" # Update .github/workflows/main.yml too
version = "0.16.0-pre"
