[package]
name = "binrw_derive"
version = "1.4.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
description = "Derive macro for binread"
repository = "https://github.com/jam1garner/binread_derive"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["extra-traits", "full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
binrw = { path = "../binread" }

[features]
debug_template = []
