[package]
name = "binrw"
version = "0.10.0"
authors = [
    "jam1garner <jam@jam1.re>",
    "Colin Snover <github.com@zetafleet.com>",
    "Kitlith <kitlith@kitl.pw>",
    "roblabla <robinlambertz+dev@gmail.com>"
]
edition = "2021"
repository = "https://github.com/jam1garner/binrw"
license = "MIT"
description = "A Rust crate for helping read structs from binary data using ✨macro magic✨"
readme = "../README.md"
documentation = "https://docs.rs/binrw"
homepage = "https://binrw.rs"

[dependencies]
array-init = "2.0"
binrw_derive = { version = "0.10.0", path = "../binrw_derive" }
bytemuck = "1.12"

[dev-dependencies]
modular-bitfield = "0.11"
trybuild = "1.0"

[features]
default = ["std", "verbose-backtrace"]
std = []
verbose-backtrace = ["binrw_derive/verbose-backtrace"]
