[package]
name = "binrw"
description = "A Rust crate for helping read structs from binary data using ✨macro magic✨"
categories = [ "encoding", "parsing" ]
keywords = [ "binary", "encode", "decode", "serialize", "deserialize" ]
readme = "../README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
array-init = "2.0"
binrw_derive = { path = "../binrw_derive", version = "0.13.0-pre" }
bytemuck = "1.12"

[dev-dependencies]
modular-bitfield = "0.11"
trybuild = "1.0"

[features]
default = ["std", "verbose-backtrace"]
std = []
verbose-backtrace = ["binrw_derive/verbose-backtrace"]
