[package]
name = "binrw_derive"
version = "0.11.0"
authors = [
    "jam1garner <jam@jam1.re>",
    "Colin Snover <github.com@zetafleet.com>",
    "Kitlith <kitlith@kitl.pw>",
    "roblabla <robinlambertz+dev@gmail.com>"
]
edition = "2021"
description = "Derive macro for binrw"
repository = "https://github.com/jam1garner/binrw"
license = "MIT"
homepage = "https://binrw.rs"

[lib]
proc-macro = true

[dependencies]
either = "1.8"
owo-colors = { version = "3", optional = true }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "1", features = ["extra-traits", "fold", "full", "visit"] }

[dev-dependencies]
runtime-macros-derive = "0.4.0"

[features]
default = []
verbose-backtrace = ["owo-colors"]
