[package]
name = "binrw_derive"
description = "Derive macro for binrw"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
either = "1.8"
owo-colors = { version = "3", optional = true }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "1", features = ["extra-traits", "fold", "full", "visit"] }

[dev-dependencies]
runtime-macros-derive = "0.4.0"

[features]
default = []
verbose-backtrace = ["owo-colors"]
