[package]
name = "binrw_derive"
description = "Derive macro for binrw"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
either = "1.0.0"
owo-colors = { version = "4.0.0", optional = true }
proc-macro2 = { version = "1.0.53", features = ["span-locations"] }
quote = "1.0.0"
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit"] }

[dev-dependencies]
runtime-macros = "1.1.0"

[features]
default = []
verbose-backtrace = ["owo-colors"]
